# dig-v2

./: .gitignore  Cargo.toml  README.md  justfile  wasm-build.sh
assets/: tileset.ase
src/: app.rs  grid.rs  input.rs  main.rs  physics.rs  physics2.rs  player.rs  position.rs  tile.rs  tile_map.rs  ui.rs
src/entity/: camera.rs  cursor.rs  mod.rs  player.rs  tile_map.rs  ui.rs
