[package]
name = "another-game"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
itertools = "0.13.0"
macroquad = { git = "https://github.com/not-fl3/macroquad", features = ["glam-serde"] }
quad-storage = "0.1.3"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
bevy_ecs = { version = "0.14.1", default-features = false}
asefile = { version = "0.3.8" }
image = { version = "0.24.9", default-features = false, features = ["png"] }
